# speech

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
cfg/: speech.cfg
include/speech/: speech_node.h
msg/: voice.msg
src/: speech_node.cpp
